--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node prisma/seed.js"
-
+    "seed": "node prisma/seed.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
